--- a/README.Rmd
+++ b/README.Rmd
@@ -10,7 +10,9 @@ always_allow_html: true
 ## A collaborative work on a data publication for the seasons 2015–2019 of the BRIWECS consortium
 
 [![Website - pkgdown](https://img.shields.io/badge/data-overview-blue)](https://tillrose.github.io/BRIWECS_Data_Publication/data_overview.html) [![Project-website](https://img.shields.io/badge/Project-website-darkgreen)](https://www.igps.uni-hannover.de/de/forschung/forschungsprojekte/detailansicht/projects/forschungsverbund-briwecs)
+
 <!-- [![License: GPL-3](https://img.shields.io/badge/License-GPL3-orange)](https://www.r-project.org/Licenses/) -->
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 suppressWarnings(library(dplyr));
@@ -38,7 +40,16 @@ left_join(unit ,by='trait')%>%
   view_group(.,"trait",c('Full.name',"Trait","unit")) 
 ```
 
-![](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/BRIWECS_logo.png){fig-align="right"}
+![](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/BRIWECS_logo.png){fig-align="right"} 
+
+## insturctution 
+1. open `BRIWECS_Data_Publication.RProject` 
+2. open `scripts/run.R`
+3. run all `Ctrl + Alt + R`
+![](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/Instruction.PNG){fig-align="center"}
+
+## directory tree
+
 ```{r,echo=F,fig.width=8, fig.height=10,warning=F}
 dirs <- list.dirs(path = ".", full.names = TRUE, recursive = TRUE) 
 
@@ -89,6 +100,8 @@ do.call('rbind',
 
 ```
 
+## unit table
+
 ```{r,echo=F}
 
 
@@ -101,7 +114,7 @@ tbl%>%
 
 ```
 
-
+## overview picture
 
 ![](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/fig1.png){fig-align="center"}
 
