--- a/README.Rmd
+++ b/README.Rmd
@@ -40,17 +40,17 @@ left_join(unit ,by='trait')%>%
   view_group(.,"trait",c('Full.name',"Trait","unit")) 
 ```
 
-![](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/BRIWECS_logo.png){fig-align="right"} 
+![](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/BRIWECS_logo.png){fig-align="right"}
 
-## insturctution 
-1. open `BRIWECS_Data_Publication.RProject` 
-2. open `scripts/run.R`
-3. run all `Ctrl + Alt + R`
-![](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/Instruction.PNG){fig-align="center"}
+## insturctution
+
+1.  open `BRIWECS_Data_Publication.RProject`
+2.  open `scripts/run.R`
+3.  run all `Ctrl + Alt + R` ![](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/Instruction.PNG){fig-align="center"}
 
 ## directory tree
 
-```{r,echo=F,fig.width=8, fig.height=10,warning=F}
+```{r,echo=F,fig.width=10, fig.height=10,warning=F}
 dirs <- list.dirs(path = ".", full.names = TRUE, recursive = TRUE) 
 
 r.target <- paste(c(".git",".Rproj.user",".quarto","gfm","docs"),
@@ -72,7 +72,7 @@ x <- lapply(strsplit(dirst, "/"),
   plyr::rbind.fill(.) %>%
   filter(!is.na(V2)) %>% 
   group_by(V1,V2,V3) %>%
-  reframe(V4 = case_when(n() > 5~sprintf("%s files",n()-1),
+  reframe(V4 = case_when(n() > 5&(!V3=="pre-processing")~sprintf("%s files",n()-1),
                            T~V4)) %>% 
   mutate(V2=factor(V2,levels=c("data","metadata","scripts","output","figure"))) %>% 
   arrange(desc(V2)) %>% suppressWarnings()
