--- a/README.Rmd
+++ b/README.Rmd
@@ -27,7 +27,7 @@ unit<- xlsx::read.xlsx("./metadata/Unit.xlsx",sheetIndex = 1) %>%
   mutate(unit=gsub('\\#','Nbr ',unit),
          unit=gsub('\\*',' x ',unit),
          unit=ifelse(is.na(unit),' ',unit),
-         unit=gsub("caused.*","",unit,perl=T)
+         Full.name=gsub("caused.*","",Full.name,perl=T)
          ) %>% select(-trait_old)
 
 raw <- read.csv2("./output/BRIWECS_data_publication.csv") %>% 
@@ -109,18 +109,13 @@ do.call('rbind',
 ## trait table
 
 ```{r,echo=F}
-
-
-
 tbl%>%
   kbl(caption = "Table 1. trait names, sources, ranges and units") %>%
   kable_classic_2(full_width = F, position = "float_right")
-
-
 ```
 
 ## overview picture
 
-![](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/fig1.png){fig-align="center"}
+![Fig1. An overview of MET data descriptor of  winter wheat containing 24 traits collected across six locations in Germany (GGE, HAN, KAL, KIE, QLB, RHH) with nine managements (HN_WF_RO, LN_NF_IR, HN_NF_IR, HN_WF_IR, HN_WF_RF, LN_WF_IR, HN_NF_RF, LN_NF_RF and LN_WF_RF) during six years (2015-2020). ](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/fig1.png){fig-align="center"}
 
-![](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/data_point.png){fig-align="center"}
+![Fig2.Scatter plot of 29 combinations of location by year by management (LxYxM) versus 228 genotypes for 24 traits.](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/data_point.png){fig-align="center"}
