--- a/README.Rmd
+++ b/README.Rmd
@@ -9,7 +9,7 @@ always_allow_html: true
 
 ## A collaborative work on a data publication for the seasons 2015–2019 of the BRIWECS consortium
 
-[![Website - pkgdown](https://img.shields.io/badge/data-overview-blue)](https://tillrose.github.io/BRIWECS_Data_Publication/data_overview.html) [![Project-website](https://img.shields.io/badge/Project-website-darkgreen)](https://www.igps.uni-hannover.de/de/forschung/forschungsprojekte/detailansicht/projects/forschungsverbund-briwecs)
+[![Website - pkgdown](https://img.shields.io/badge/data-visulaization-blue)](https://tillrose.github.io/BRIWECS_Data_Publication/data_overview.html) [![Project-website](https://img.shields.io/badge/Project-website-darkgreen)](https://www.igps.uni-hannover.de/de/forschung/forschungsprojekte/detailansicht/projects/forschungsverbund-briwecs)
 
 <!-- [![License: GPL-3](https://img.shields.io/badge/License-GPL3-orange)](https://www.r-project.org/Licenses/) -->
 
@@ -46,7 +46,7 @@ left_join(unit ,by='trait')%>%
 
 ```
 
-![](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/BRIWECS_logo.png){fig-align="right"}
+![Breeding Innovations in Wheat for Efficient Cropping Systems (BRIWECS). ](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/BRIWECS_logo.png){fig-align="right"}
 
 ## insturctution
 
@@ -110,11 +110,11 @@ do.call('rbind',
 
 ```{r,echo=F}
 tbl%>%
-  kbl(caption = "Table 1. trait names, sources, ranges and units") %>%
+  kbl(caption = "Table 1. Trait names, sources, ranges and units") %>%
   kable_classic_2(full_width = F, position = "float_right")
 ```
 
-## overview picture
+## overview visualizations
 
 ![Fig1. An overview of MET data descriptor of  winter wheat containing 24 traits collected across six locations in Germany (GGE, HAN, KAL, KIE, QLB, RHH) with nine managements (HN_WF_RO, LN_NF_IR, HN_NF_IR, HN_WF_IR, HN_WF_RF, LN_WF_IR, HN_NF_RF, LN_NF_RF and LN_WF_RF) during six years (2015-2020). ](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/fig1.png){fig-align="center"}
 
