--- a/README.Rmd
+++ b/README.Rmd
@@ -15,7 +15,7 @@ always_allow_html: true
 
 <!-- [![License: GPL-3](https://img.shields.io/badge/License-GPL3-orange)](https://www.r-project.org/Licenses/) -->
 
-```{r setup, include=FALSE}
+```{r setup, include=FALSE,echo=F}
 knitr::opts_chunk$set(echo = TRUE)
 suppressWarnings(library(dplyr));
 # suppressWarnings(library(ggplot2));
@@ -115,7 +115,7 @@ tbl%>%
 ```
 
 ## overview visualizations
-
+![Fig0. Experiments location and soil properties.](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/fig0.png){fig-align="center"}
 ![Fig1. An overview of MET data descriptor of  winter wheat containing 24 traits collected across six locations in Germany (GGE, HAN, KAL, KIE, QLB, RHH) with nine managements (HN_WF_RO, LN_NF_IR, HN_NF_IR, HN_WF_IR, HN_WF_RF, LN_WF_IR, HN_NF_RF, LN_NF_RF and LN_WF_RF) during six years (2015-2020). ](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/fig1.png){fig-align="center"}
 
 ![Fig2.Scatter plot of 29 combinations of location by year by management (LxYxM) versus 228 genotypes for 24 traits.](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/data_point.png){fig-align="center"}
