--- a/README.Rmd
+++ b/README.Rmd
@@ -112,7 +112,19 @@ tbl%>%
   kable_classic_2(full_width = F, position = "float_right")
 ```
 
+## previous publications
+::: {#fig-elephants layout-ncol=5}
+
+![Surus](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/previous_paper/Carolin_2020.png){#fig-surus}
+
+![Hanno](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/previous_paper/Kai2019.PNG){#fig-hanno}
+
+Famous Elephants
+:::
+
 ## overview visualizations
+
+
 
 ![Fig0. Experiments location and soil properties.](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/fig0.png){fig-align="center"} ![Fig1. An overview of MET data descriptor of winter wheat containing 24 traits collected across six locations in Germany (GGE, HAN, KAL, KIE, QLB, RHH) with nine managements (HN_WF_RO, LN_NF_IR, HN_NF_IR, HN_WF_IR, HN_WF_RF, LN_WF_IR, HN_NF_RF, LN_NF_RF and LN_WF_RF) during six years (2015-2020).](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/fig1.png){fig-align="center"}
 
