--- a/README.Rmd
+++ b/README.Rmd
@@ -117,11 +117,15 @@ tbl%>%
 
 ![[Voss-Fels 2019](https://www.nature.com/articles/s41477-019-0445-5)](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/previous_paper/Kai2019.PNG){#fig-kai  width=230 height=300 .lightbox}
 
+
 ![[Rose 2019](https://www.frontiersin.org/journals/plant-science/articles/10.3389/fpls.2019.01521/full)](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/previous_paper/Rose_2019.png){#fig-till  width=230 height=300}
+
 
 ![[Lichthardt 2020](https://www.frontiersin.org/journals/plant-science/articles/10.3389/fpls.2019.01771/full)](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/previous_paper/Carolin_2020.png){#fig-carolin width=230 height=300}
 
+
 ![[Zetzsche 2020](https://www.nature.com/articles/s41598-020-77200-0)](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/previous_paper/Zetzsche_2020.png){#fig-holger width=230 height=300}
+
 
 ![[Sabir 2023](https://www.nature.com/articles/s41477-023-01516-8)](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/previous_paper/Sabir_2023.png){#fig-kahdija width=230 height=300}
 :::
@@ -130,6 +134,8 @@ tbl%>%
 
 
 
-![Fig0. Experiments location and soil properties.](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/fig0.png){fig-align="center"} ![Fig1. An overview of MET data descriptor of winter wheat containing 24 traits collected across six locations in Germany (GGE, HAN, KAL, KIE, QLB, RHH) with nine managements (HN_WF_RO, LN_NF_IR, HN_NF_IR, HN_WF_IR, HN_WF_RF, LN_WF_IR, HN_NF_RF, LN_NF_RF and LN_WF_RF) during six years (2015-2020).](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/fig1.png){fig-align="center"}
+![Fig0. Experiments location and soil properties.](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/fig0.png){fig-align="center"} 
+
+![Fig1. An overview of MET data descriptor of winter wheat containing 24 traits collected across six locations in Germany (GGE, HAN, KAL, KIE, QLB, RHH) with nine managements (HN_WF_RO, LN_NF_IR, HN_NF_IR, HN_WF_IR, HN_WF_RF, LN_WF_IR, HN_NF_RF, LN_NF_RF and LN_WF_RF) during six years (2015-2020).](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/fig1.png){fig-align="center"}
 
 ![Fig2.Scatter plot of 29 combinations of location by year by management (LxYxM) versus 228 genotypes for 24 traits.](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/data_point.png){fig-align="center"}
