--- a/README.Rmd
+++ b/README.Rmd
@@ -121,9 +121,9 @@ tbl%>%
 
 [![Lichthardt 2020](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/previous_paper/Carolin_2020.png){#fig-carolin width=230 height=300}](https://www.frontiersin.org/journals/plant-science/articles/10.3389/fpls.2019.01771/full)
 
-[![Zetzsche 2020](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/previous_paper/Zetzsche_2020.png)](https://www.nature.com/articles/s41598-020-77200-0){#fig-holger width=230 height=300}
+[![Zetzsche 2020](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/previous_paper/Zetzsche_2020.png){#fig-holger width=230 height=300}](https://www.nature.com/articles/s41598-020-77200-0)
 
-[![Sabir 2023](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/previous_paper/Sabir_2023.png)](https://www.nature.com/articles/s41477-023-01516-8){#fig-kahdija width=230 height=300}
+[![Sabir 2023](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/previous_paper/Sabir_2023.png){#fig-kahdija width=230 height=300}](https://www.nature.com/articles/s41477-023-01516-8)
 
 :::
 
